Footer section added, Li add using map function

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -3,4 +3,12 @@
     background-size: cover;
     background-position: center;
      height: 138px;
+     margin-bottom: 45px;
+}
+.scroll::-webkit-scrollbar{
+    display: none;
+}
+.scroll{
+    scrollbar-width: none;
+    margin-bottom: 45px;
 }
