--- a/src/Components/Create/Create.css
+++ b/src/Components/Create/Create.css
@@ -2,4 +2,13 @@ input[type=file]::file-selector-button {
     border: 2px solid black;
 padding: .2em .4em;
 border-radius: .2em;
+display: none; 
+color: transparent;
+
+}
+.scroll::-webkit-scrollbar{
+    display: none;
+}
+.scroll{
+    scrollbar-width: none;
 }
